--- a/HT5.Rmd
+++ b/HT5.Rmd
@@ -20,31 +20,68 @@ Predecir los precios con el algoritmo de Naives Bayes
 ```
 
 ```{r}
-  train <- read.csv("train.csv", stringsAsFactors = FALSE)
-trainImportantes <- train[c("MSSubClass","LotFrontage","LotArea","OverallCond","YearBuilt","YearRemodAdd","X2ndFlrSF","FullBath","TotRmsAbvGrd","KitchenAbvGr","GarageCars","PoolArea","SalePrice")]
-trainImportantes[is.na(trainImportantes)]<-0
+  set.seed(123)
+  datos <- read.csv("train.csv", stringsAsFactors = FALSE)
+  datos$Alley <- mapvalues(datos$Alley, c(NA), c("None"))
+  datos$MasVnrType <- mapvalues(datos$MasVnrType, c(NA), c("None"))
+  datos$BsmtQual <- mapvalues(datos$BsmtQual, c(NA), c("None"))
+  datos$BsmtCond <- mapvalues(datos$BsmtCond, c(NA), c("None"))
+  datos$BsmtExposure <- mapvalues(datos$BsmtExposure, c(NA), c("None"))
+  datos$BsmtFinType1 <- mapvalues(datos$BsmtFinType1, c(NA), c("None"))
+  datos$BsmtFinType2 <- mapvalues(datos$BsmtFinType2, c(NA), c("None"))
+  datos$Electrical <- mapvalues(datos$Electrical, c(NA), c("None"))
+  datos$FireplaceQu <- mapvalues(datos$FireplaceQu, c(NA), c("None"))
+  datos$GarageType <- mapvalues(datos$GarageType, c(NA), c("None"))
+  datos$GarageFinish <- mapvalues(datos$GarageFinish, c(NA), c("None"))
+  datos$GarageQual <- mapvalues(datos$GarageQual, c(NA), c("None"))
+  datos$GarageCond <- mapvalues(datos$GarageCond, c(NA), c("None"))
+  datos$PoolQC <- mapvalues(datos$PoolQC, c(NA), c("None"))
+  datos$Fence <- mapvalues(datos$Fence, c(NA), c("None"))
+  datos$MiscFeature <- mapvalues(datos$MiscFeature, c(NA), c("None"))
+  
+  datos$LotFrontage <- mapvalues(datos$LotFrontage, c(NA), c(0))
+  datos$MasVnrArea <- mapvalues(datos$MasVnrArea, c(NA), c(0))
+  datos$GarageYrBlt <- mapvalues(datos$GarageYrBlt, c(NA), c(0))
+  
+
+
+
+  #is.na(datos)
+  #datos <- na.omit(datos) 
+trainImportantes <- datos[c("MSSubClass","LotFrontage","LotArea","OverallCond","YearBuilt","YearRemodAdd","X2ndFlrSF","FullBath","TotRmsAbvGrd","KitchenAbvGr","GarageCars","PoolArea","SalePrice")]
+#trainImportantes[is.na(trainImportantes)]<-0
+
 
 
 km<-kmeans(trainImportantes,3)
-train$grupo<-km$cluster
+datos$grupo<-km$cluster
 
-g1<- train[train$grupo==1,]
-g2<- train[train$grupo==2,]
-g3<- train[train$grupo==3,]
+#g1<- train[train$grupo==1,]
+#g2<- train[train$grupo==2,]
+#g3<- train[train$grupo==3,]
 
-train$grupo <- mapvalues(train$grupo, c(1,2,3), c("Caro","Barato","Intermedio"))
+datos$grupo <- mapvalues(datos$grupo, c(1,2,3), c("Caro","Barato","Intermedio"))
 ```
 
 ```{r}
   porcentaje<-0.7
-  set.seed(123)
-  corte <- sample(nrow(train),nrow(train)*porcentaje)
-  train0<-train[corte,]
-  test0<-train[-corte,]
+  
+  corte <- sample(nrow(datos),nrow(datos)*porcentaje)
+  train<-datos[corte,]
+  test<-datos[-corte,]
 ```
 ### Se realiza el calculo de naives bayes
 ```{r}
-  modelo<-naiveBayes(as.factor(grupo)~.,data=train0)
-  predBayes<-predict(modelo, newdata = test0[,1:81])
-  confusionMatrix(table(predBayes,test0$grupo))
+  modelo<-naiveBayes(as.factor(grupo)~.,data=train)
+
+  predBayes<-predict(modelo, newdata = test[,1:81])
+  confusionMatrix(table(predBayes,test$grupo))
+```
+
+```{r}
+ct<-trainControl(method = "cv",train[,1:81],number=10, verboseIter=T)
+modeloCaret<-train(grupo~.,data=datos[,2:82],method="nb",trControl = ct)
+
+prediccionCaret<-predict(modeloCaret,newdata = test[,1:4])
+confusionMatrix(prediccionCaret,test$Species)
 ```
