--- a/HT5.Rmd
+++ b/HT5.Rmd
@@ -15,75 +15,77 @@ Predecir los precios con el algoritmo de Naives Bayes
   library(caret)
   library(plyr)
   library(dplyr)
+  library(lattice)
   #Ubicacion de archivos en computadoras
-  setwd("C:/Users/Gustavo/Desktop/SEPTIMO SEMESTRE/MINERIA/HDT5/Hoja-de-trabajo-5")
-  #setwd("C:/Users/alber/Documents/UVG/Septimo semestre/Mineria de Datos/Hoja-Trabajo-5/Hoja-de-trabajo-5")
+  #setwd("C:/Users/Gustavo/Desktop/SEPTIMO SEMESTRE/MINERIA/HDT5/Hoja-de-trabajo-5")
+  setwd("C:/Users/alber/Documents/UVG/Septimo semestre/Mineria de Datos/Hoja-Trabajo-5/Hoja-de-trabajo-5")
+  set.seed(123)
 ```
 
 ```{r}
-  set.seed(123)
   datos <- read.csv("train.csv", stringsAsFactors = FALSE)
-  datos$Utilities <- NULL
+  #datos$Utilities <- NULL
   #datos <- read.csv("train.csv") 
-  datos$Alley <- mapvalues(datos$Alley, c(NA), c("None"))
-  datos$MasVnrType <- mapvalues(datos$MasVnrType, c(NA), c("None"))
-  datos$BsmtQual <- mapvalues(datos$BsmtQual, c(NA), c("None"))
-  datos$BsmtCond <- mapvalues(datos$BsmtCond, c(NA), c("None"))
-  datos$BsmtExposure <- mapvalues(datos$BsmtExposure, c(NA), c("None"))
-  datos$BsmtFinType1 <- mapvalues(datos$BsmtFinType1, c(NA), c("None"))
-  datos$BsmtFinType2 <- mapvalues(datos$BsmtFinType2, c(NA), c("None"))
-  datos$Electrical <- mapvalues(datos$Electrical, c(NA), c("None"))
-  datos$FireplaceQu <- mapvalues(datos$FireplaceQu, c(NA), c("None"))
-  datos$GarageType <- mapvalues(datos$GarageType, c(NA), c("None"))
-  datos$GarageFinish <- mapvalues(datos$GarageFinish, c(NA), c("None"))
-  datos$GarageQual <- mapvalues(datos$GarageQual, c(NA), c("None"))
-  datos$GarageCond <- mapvalues(datos$GarageCond, c(NA), c("None"))
-  datos$PoolQC <- mapvalues(datos$PoolQC, c(NA), c("None"))
-  datos$Fence <- mapvalues(datos$Fence, c(NA), c("None"))
-  datos$MiscFeature <- mapvalues(datos$MiscFeature, c(NA), c("None"))
+  #datos$Alley <- mapvalues(datos$Alley, c(NA), c("None"))
+  #datos$MasVnrType <- mapvalues(datos$MasVnrType, c(NA), c("None"))
+  #datos$BsmtQual <- mapvalues(datos$BsmtQual, c(NA), c("None"))
+  #datos$BsmtCond <- mapvalues(datos$BsmtCond, c(NA), c("None"))
+  #datos$BsmtExposure <- mapvalues(datos$BsmtExposure, c(NA), c("None"))
+  #datos$BsmtFinType1 <- mapvalues(datos$BsmtFinType1, c(NA), c("None"))
+  #datos$BsmtFinType2 <- mapvalues(datos$BsmtFinType2, c(NA), c("None"))
+  #datos$Electrical <- mapvalues(datos$Electrical, c(NA), c("None"))
+  #datos$FireplaceQu <- mapvalues(datos$FireplaceQu, c(NA), c("None"))
+  #datos$GarageType <- mapvalues(datos$GarageType, c(NA), c("None"))
+  #datos$GarageFinish <- mapvalues(datos$GarageFinish, c(NA), c("None"))
+  #datos$GarageQual <- mapvalues(datos$GarageQual, c(NA), c("None"))
+  #datos$GarageCond <- mapvalues(datos$GarageCond, c(NA), c("None"))
+  #datos$PoolQC <- mapvalues(datos$PoolQC, c(NA), c("None"))
+  #datos$Fence <- mapvalues(datos$Fence, c(NA), c("None"))
+  #datos$MiscFeature <- mapvalues(datos$MiscFeature, c(NA), c("None"))
   
-  datos$LotFrontage <- mapvalues(datos$LotFrontage, c(NA), c(0))
-  datos$MasVnrArea <- mapvalues(datos$MasVnrArea, c(NA), c(0))
-  datos$GarageYrBlt <- mapvalues(datos$GarageYrBlt, c(NA), c(0))
+  #datos$LotFrontage <- mapvalues(datos$LotFrontage, c(NA), c(0))
+  #datos$MasVnrArea <- mapvalues(datos$MasVnrArea, c(NA), c(0))
+  #datos$GarageYrBlt <- mapvalues(datos$GarageYrBlt, c(NA), c(0))
+  
+  #ifelse(is.na(datos), 0, datos)
   
   #datos[,c(1:2,4:5,18:21,27,35,37:39,44:53,55,57,60,62,63,67:72,76:78,81)] <- lapply(datos[,c(1:2,4:5,18:21,27,35,37:39,44:53,55,57,60,62,63,67:72,76:78,81)], as.numeric)
   
   #is.na(datos)
   #datos <- na.omit(datos) 
-trainImportantes <- datos[c("MSSubClass","LotFrontage","LotArea","OverallCond","YearBuilt","YearRemodAdd","X2ndFlrSF","FullBath","TotRmsAbvGrd","KitchenAbvGr","GarageCars","PoolArea","SalePrice")]
+trainImportantes <- datos[c("MSSubClass","LotFrontage","LotArea","OverallCond","YearBuilt","YearRemodAdd","X2ndFlrSF","FullBath","TotRmsAbvGrd","GarageCars","SalePrice")]
 trainImportantes[is.na(trainImportantes)]<-0
 
 
 
 km<-kmeans(trainImportantes,3)
-datos$grupo<-km$cluster
+trainImportantes$grupo<-km$cluster
 
 #g1<- train[train$grupo==1,]
 #g2<- train[train$grupo==2,]
 #g3<- train[train$grupo==3,]
 
-datos$grupo <- mapvalues(datos$grupo, c(1,2,3), c("Caro","Barato","Intermedio"))
+trainImportantes$grupo <- mapvalues(trainImportantes$grupo, c(1,2,3), c("Caro","Barato","Intermedio"))
 ```
 
 ```{r}
   porcentaje<-0.7
   
-  corte <- sample(nrow(datos),nrow(datos)*porcentaje)
-  train<-datos[corte,]
-  test<-datos[-corte,]
+  corte <- sample(nrow(trainImportantes),nrow(trainImportantes)*porcentaje)
+  train<-trainImportantes[corte,]
+  test<-trainImportantes[-corte,]
 ```
 ### Se realiza el calculo de naives bayes
 ```{r}
-  modelo<-naiveBayes(as.factor(grupo)~.,data=train)
-
-  predBayes<-predict(modelo, newdata = test[,1:80])
+  modelo<-naiveBayes(as.factor(grupo)~.,data=trainImportantes)
+  predBayes<-predict(modelo, newdata = test[,1:11])
   confusionMatrix(table(predBayes,test$grupo))
 ```
 
 ```{r}
-ct<-trainControl(method = "cv",train[,2:80],number=10, verboseIter=T)
-modeloCaret<-train(grupo~.,data=datos,method="nb",trControl = ct)
+ct<-trainControl(method = "cv", train,number=10, verboseIter=T)
+modeloCaret<-train(grupo~.,data=trainImportantes,method="nb",trControl = ct)
 
-prediccionCaret<-predict(modeloCaret,newdata = test[,1:4])
-confusionMatrix(prediccionCaret,test$Species)
+prediccionCaret<-predict(modeloCaret,newdata = test[,1:11])
+confusionMatrix(table(prediccionCaret,test$grupo))
 ```
