--- a/HT5.Rmd
+++ b/HT5.Rmd
@@ -17,9 +17,10 @@ Predecir los precios con el algoritmo de Naives Bayes
   library(plyr)
   library(dplyr)
   library(lattice)
+  library(rpart)
   #Ubicacion de archivos en computadoras
-  setwd("C:/Users/Gustavo/Desktop/SEPTIMO SEMESTRE/MINERIA/HDT5/Hoja-de-trabajo-5")
-  #setwd("C:/Users/alber/Documents/UVG/Septimo semestre/Mineria de Datos/Hoja-Trabajo-5/Hoja-de-trabajo-5")
+  #setwd("C:/Users/Gustavo/Desktop/SEPTIMO SEMESTRE/MINERIA/HDT5/Hoja-de-trabajo-5")
+  setwd("C:/Users/alber/Documents/UVG/Septimo semestre/Mineria de Datos/Hoja-Trabajo-5/Hoja-de-trabajo-5")
 ```
 
 ## Selección de variables
@@ -91,4 +92,15 @@ El modelo tuvo un 0.94 de Accurancy con 95% de índice de confianza puede ondula
 ```{r}
 prediccionCaret<-predict(modeloCaret,newdata = test[,1:11])
 confusionMatrix(table(prediccionCaret,test$grupo))
+```
+
+### Se realiza la prediccion con un árbol de clasificación
+```{r}
+trainRowsNumber<-sample(1:nrow(trainImportantes),porciento*nrow(trainImportantes))
+dt_model<-rpart(grupo~.,train,method = "class")
+prediccion <- predict(dt_model, newdata = test[,1:11])
+columnaMasAlta<-apply(prediccion, 1, function(x) colnames(prediccion)[which.max(x)])
+test$prediccion<-columnaMasAlta
+cfm<-confusionMatrix(table(test$prediccion, test$grupo))
+cfm
 ```
